# python-server-sdk

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .tool-versions  AGENTS.md  Caddyfile  DEVELOPMENT.md  README.md  compile_proto.sh  docker-compose-test.yaml  index.html  mkdocs.yml  poetry_scripts.py  pyproject.toml  scripts.py  versions.json
.github/workflows/: ci.yml  main_docs.yml  publish.yml  tag_docs.yml
examples/: README.md
examples/multimodal/: README.md  main.py  pyproject.toml
examples/multimodal/multimodal/: agent.py  config.py  notifier.py  room.py  session.py
examples/poet_chat/: .env.example  README.md  main.py  pyproject.toml
examples/room-manager/: arguments.py  main.py  room_service.py  routes.py
examples/room_manager/: README.md  arguments.py  main.py  (+2 more)
examples/selective_subscription/: .env.example  README.md  main.py  pyproject copy.toml  pyproject.toml
examples/selective_subscription/selective_subscription/: __init__.py  app.py  config.py  notification_handler.py  room_service.py
examples/selective_subscription/templates/: index.html
examples/transcription/: README.md  main.py  pyproject.toml
examples/transcription/transcription/: agent.py  config.py  notifier.py  room.py  transcription.py  worker.py
fishjam/: __init__.py  _webhook_notifier.py  _ws_notifier.py  errors.py  utils.py
latest/: 404.html  index.html  server_notifications.html
release-automation/: bump-version.sh
tests/: Dockerfile  conftest.py  test_allowed_notifications.py  test_config_validation.py  test_gemini.py  test_notifier.py  test_openapi_client_headers.py  test_room_api.py  test_webhook_notifier.py
v0.13.0/: index.html
v0.15.0/: index.html
v0.18.0/: index.html
v0.19.0/: index.html
v0.20.0/: index.html
v0.21.0/: index.html
v0.21.1/: index.html
v0.22.0/: index.html  server_notifications.html
v0.22.1/: 404.html  index.html
v0.23.0/: index.html  server_notifications.html
v0.24.0/: index.html
v0.25.0/: index.html
v0.26.0/: 404.html  index.html
v0.26.1/: index.html
v0.27.0/: index.html
v0.28.0/: index.html
v0.28.1/: index.html
v0.29.0/: index.html
v0.6.0/: index.html  server_notifications.html
v0.6.1/: index.html
v0.7.0/: index.html
v0.8.0/: index.html
v0.9.0/: index.html
(+213 files in other folders)
