[project]
name = "multimodal"
version = "0.1.0"
description = "Fishjam multimodal demo with Gemini Live API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]==0.116.0",
    "fishjam-server-sdk",
    "google-genai>=1.31.0",
]

[tool.uv.sources]
fishjam-server-sdk = { workspace = true }
