[project]
name = "selective-subscription-demo"
version = "0.1.0"
description = "Selective subscription demo using Fishjam Python SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.35.0",
    "uvicorn>=0.25.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["selective_subscription"]