[project]
name = "selective-subscription-demo"
version = "0.1.0"
description = "Selective subscription demo using Fishjam Python SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.35.0",
    "uvicorn>=0.25.0",
    "fishjam-server-sdk",
    "python-dotenv",
]

[tool.uv.sources]
fishjam-server-sdk = { workspace = true }